fix project sample overflow

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -161,7 +161,7 @@ a:active, a:hover, .NavLink:hover {
 }
 
 .ProjectsGallery > a {
-    width: 25%;
+    width: 400px;
     margin: 5%;
 }
 
@@ -172,7 +172,7 @@ a:active, a:hover, .NavLink:hover {
 
 .ProjectSample, .Project {
     margin: 10% 0 80%;
-    padding: 2% 0;
+    padding: 2% 5%;
     background-color: whitesmoke;
     color: lightcoral;
 }
@@ -181,13 +181,13 @@ a:active, a:hover, .NavLink:hover {
     display: block;
     margin: auto;
     padding: 5% 0;
-    min-width: 200px;
-    max-width: 50%;
+    width: 100%;
     text-align: center;
 }
 
 /* this is the image */
-.ProjectSample > div:nth-child(2), .Project > div:nth-child(2) {
+.Project > div:nth-child(2) {
+    min-width: 200px;
     max-width: 500px;
 }
 
